--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    <div class="flash">
+      <%= render 'layouts/flash' %>
+    </div>
     <%= yield %>
   </body>
 </html>
