--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,9 @@
 <% flash.each do |flashh_type, message| %>
-  <div class="flash__message">
+  <div 
+    class="flash__message",
+    data-controller='removals',
+    data-action='animationend->removals#remove'
+  >
     <%= message %>
   </div>
 <% end %>
