--- a/app/views/quotes/destroy.turbo_stream.erb
+++ b/app/views/quotes/destroy.turbo_stream.erb
@@ -1,2 +1,2 @@
 <%= turbo_stream.remove @quote %>
-<%= turbo_stream.prepend 'flash', partials: 'layouts/flash' %>
+<%= render_turbo_stream_flash_messages %>
